# RegionX

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  config.json  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: test.yaml
artifacts/: coretime_market.contract  coretime_market.json  xc_regions.contract  xc_regions.json
contracts/coretime-market/: Cargo.toml  lib.rs
contracts/coretime-market/src/: lib.rs  tests.rs  types.rs
contracts/coretime_market/: Cargo.toml
contracts/coretime_market/src/: lib.rs  tests.rs  types.rs
contracts/order_book/: Cargo.toml
contracts/order_book/src/: lib.rs  types.rs
contracts/xc-regions/: Cargo.toml  lib.rs
contracts/xc-regions/src/: fixed_metadata_extension.rs  lib.rs  mock.rs  region.rs  tests.rs  traits.rs  types.rs
contracts/xc_regions/: Cargo.toml
contracts/xc_regions/src/: lib.rs  tests.rs  traits.rs  types.rs
environment/: Cargo.toml
environment/src/: lib.rs
extension/: Cargo.toml
extension/block-number-extension/: Cargo.toml
extension/block-number-extension/src/: lib.rs
extension/src/: lib.rs
extension/uniques-extension/: Cargo.toml
extension/uniques-extension/src/: lib.rs
extensions/uniques-extension/: Cargo.toml
extensions/uniques-extension/src/: extension.rs  lib.rs
primitives/: Cargo.toml
primitives/src/: coretime.rs  lib.rs  macros.rs  uniques.rs
tests/: common.ts
tests/market/: list.test.ts  purchase.test.ts  unlist.test.ts  updatePrice.test.ts
types/build-extrinsic/: coretime_market.ts  xc_regions.ts
types/constructors/: coretime_market.ts  xc_regions.ts
types/contract-info/: coretime_market.ts  xc_regions.ts
types/contracts/: coretime_market.ts  xc_regions.ts
types/data/: coretime_market.json  xc_regions.json
types/event-data/: coretime_market.json  xc_regions.json
types/event-types/: coretime_market.ts  xc_regions.ts
types/events/: coretime_market.ts  xc_regions.ts
types/mixed-methods/: coretime_market.ts  xc_regions.ts
types/query/: coretime_market.ts  xc_regions.ts
types/shared/: utils.ts
types/tx-sign-and-send/: coretime_market.ts  xc_regions.ts
types/types-arguments/: coretime_market.ts  xc_regions.ts
types/types-returns/: coretime_market.ts  xc_regions.ts
